--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 DB_HOST= 'localhost'
-DB_USERNAME= 'hadiya'
+DB_USERNAME= 'root'
 DB_PASSWORD= '1234'
 DB_NAME= 'maritime'
 JWT_SECRET = "uhUy7iKJ8989&*uiiuyh&uyhuj*&yj*uhj&*ujn*ij*u8UJHNU5tgh"
