--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,3 @@
-DB_HOST= 'localhost'
-DB_USERNAME= 'hadiya'
-DB_PASSWORD= '1234'
-DB_NAME= 'maritime'
 JWT_SECRET = "uhUy7iKJ8989&*uiiuyh&uyhuj*&yj*uhj&*ujn*ij*u8UJHNU5tgh"
- 
+POSTGRES_URL="postgres://default:0fqCAuHkQx5b@ep-muddy-feather-a4ll1tv7-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+PORT=8000
